# SD_Trading_V7

./: .gitattributes  .gitignore  BASELINE_BEFORE_VOLUME_OI.txt  CMakeLists.txt  ML run.txt  README.md  README_WINDOWS.md  backtest_run.bat  baseline_volume_profiles_generator.bat  build_and_test.bat  build_debug.bat  build_release.bat  clean.bat  install.bat  live_run.bat  run_test.bat  run_tests.bat  run_v8.bat  system_config.json  volume_baseline.bat
AFL/: SD_ZoneVisualizer.afl
conf/: MASTER.config  MASTER.config.bak  phase1_enhanced_v3_1_config.txt  phase1_enhanced_v3_1_config.txt_old  phase1_enhanced_v3_1_config_FIXED_before_dedup_tuning.txt  phase1_enhanced_v3_1_config_FIXED_more_trades - Copy.txt  phase1_enhanced_v3_1_config_FIXED_more_trades.txt  phase_6_config_5_Mins.txt  phase_6_config_v0.1 - baseline.txt  phase_6_config_v0.1_Tested_in_1_Mins.txt  phase_6_config_v0.1_Tested_in_1_Mins_FIXED.txt  phase_6_config_v0_2_CALIBRATED.txt  phase_6_config_v0_6_ABSORPTION_new_recommendation.txt  phase_6_config_v0_6_NEW.txt  phase_6_config_v0_6_NEW_OLD.txt  phase_6_config_v0_6_NEW_before_ChatGpt_changes.txt  phase_6_config_v0_7.txt  phase_6_config_v0_7_NEW.txt  phase_6_config_v0_7_NEW_v0.0.txt  phase_6_config_v0_7_NEW_v0.0_TUNED_87pct_PROFIT.txt  phase_6_config_v0_7_NEW_v0.2_TUNED_79pct_PROFIT.txt  phase_6_config_v0_7_NEW_v0.2_TUNED_79pct_PROFIT_old.txt  phase_6_config_v0_8.txt  symbol_registry.json  test_Config.txt
data/: bridge_status.json  sd_pipe_state_NIFTY-FUT.txt
docs/: ACTUAL_ROOT_CAUSE_ENTRY_PRICES.md  ACTUAL_ROOT_CAUSE_FROM_LOGS.md  API_REFERENCE.md  BUG_4_ZONE_PERSISTENCE_CRITICAL.md  CMakeLists.txt  CODE_CHANGES_NEEDED_ANALYSIS.md  CODE_VALIDATION.md  COMPARISON_ANALYSIS_FEB_13.md  COMPREHENSIVE_ENTRY_SCORING_IMPLEMENTATION.md  Git_Commands.txt  (+71 more)
docs/SD_V8_Implementation/SD_Trading_V8_M0_M1_final/SD_Trading_V8/src/core/: CMakeLists.txt  config_cascade.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M0_M1_final/SD_Trading_V8/src/persistence/: CMakeLists.txt  db_schema.sql  sqlite_connection.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M2/SD_Trading_V8/src/: CMakeLists.txt
docs/SD_V8_Implementation/SD_Trading_V8_M2/SD_Trading_V8/src/data/: CMakeLists.txt  bar_validator.cpp  bar_validator.h  pipe_listener.cpp  pipe_listener.h
docs/SD_V8_Implementation/SD_Trading_V8_M2/SD_Trading_V8/src/events/: CMakeLists.txt  event_bus.h  event_types.h
docs/SD_V8_Implementation/SD_Trading_V8_M2_5_M3/SD_Trading_V8/src/: CMakeLists.txt  verify_m3.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M2_5_M3/SD_Trading_V8/src/persistence/: CMakeLists.txt  db_writer.cpp  db_writer.h  sqlite_bar_repository.cpp  sqlite_bar_repository.h  sqlite_trade_repository.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M4/SD_Trading_V8/src/: CMakeLists.txt  verify_m4.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M4/SD_Trading_V8/src/data/: shadow_mode.cpp
docs/SD_V8_Implementation/SD_Trading_V8_M4/SD_Trading_V8/src/scanner/: CMakeLists.txt  compute_backend.h  cpu_backend.cpp  cpu_backend.h  scanner_orchestrator.cpp  scanner_orchestrator.h  symbol_engine_context.cpp  symbol_engine_context.h
src/: CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  ITradingEngine.h  ZoneInitializer.h  ZonePersistenceAdapter.cpp  ZonePersistenceAdapter.h  ZonesToCsv.cpp  compile_zonesToCsv.bat  csv_simulator_broker.cpp  csv_simulator_broker.h  fyers_integration.cpp  fyers_integration.h  live_data_reader.h  main_unified.cpp  run_live.cpp  run_v8_live.cpp  run_zonesToCsv.bat  sd_backtest_main.cpp  sd_engine_core.cpp  sd_engine_core.h  sd_realtime_csv_main.cpp  system_config.h  test_csv_timing.cpp  test_live_init.cpp  test_order_submitter.cpp  threadsafe_queue.cpp  verify_m2.cpp  verify_milestone2.cpp  verify_milestone3.cpp  verify_milestone4.cpp  verify_milestone5.cpp  zone_manager.cpp  zone_manager.h
src/analysis/: CMakeLists.txt  market_analyzer.cpp  market_analyzer.h
src/analytics/: CMakeLists.txt  portfolio_metrics.h
src/backtest/: backtest_engine.cpp  backtest_engine.h  csv_reporter.cpp  csv_reporter.h  performance_tracker.cpp  performance_tracker.h  run_backtest.cpp  trade_manager.cpp  trade_manager.h
src/core/: CMakeLists.txt  config_cascade.cpp  config_cascade.h  config_loader.cpp  config_loader.h  system_config_loader.cpp  system_config_loader.h  zone_state_manager.cpp  zone_state_manager.h
src/data/: CMakeLists.txt  bar_validator.cpp  bar_validator.h  pipe_listener.cpp  pipe_listener.h  shadow_mode.h
src/dryrun/: dryrun_engine.cpp  dryrun_engine.h
src/engines/: CMakeLists.txt
src/events/: event_bus.h  event_types.h
src/live/: amibroker_adapter.cpp  amibroker_adapter.h  broker_interface.h  fyers_adapter.cpp  fyers_adapter.h  live_engine.cpp  live_engine.h  pipe_broker.cpp  pipe_broker.h  run_live.cpp  v8.cpp
src/persistence/: CMakeLists.txt  db_schema.sql  db_writer.cpp  db_writer.h  sqlite_bar_repository.h  sqlite_connection.h  sqlite_trade_repository.cpp  sqlite_trade_repository.h  sqlite_zone_repository.cpp  sqlite_zone_repository.h
src/scanner/: CMakeLists.txt  bar_router.cpp  bar_router.h  portfolio_guard.cpp  portfolio_guard.h  symbol_context.cpp  symbol_context.h
src/scoring/: CMakeLists.txt  entry_decision_engine.cpp  entry_decision_engine.cpp_bkp  entry_decision_engine.h  entry_validation_scorer.cpp  entry_validation_scorer.h  oi_scorer.cpp  scoring_types.h  volume_scorer.cpp  volume_scorer.h  zone_quality_scorer.cpp  zone_quality_scorer.h  zone_scorer.cpp  zone_scorer.h
src/springboot/: CMakeLists.txt  signal_consumer.cpp  springboot_api.md  springboot_bridge.cpp  springboot_bridge.h  trade_close_listener.cpp
src/utils/: CMakeLists.txt  institutional_index.h  logger.h  system_initializer.cpp  system_initializer.h  volume_baseline.cpp  volume_baseline.h
src/utils/http/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  http_client.cpp  http_client.h  http_utils.vcxproj  http_utils.vcxproj.filters  order_submitter.cpp  order_submitter.h
src/zones/: CMakeLists.txt  zone_detector.cpp  zone_detector.h
tests/: CMakeLists.txt
tests/unit/: test_config.cpp  test_logger.cpp
(+857 files in other folders)
